--- a/index.html
+++ b/index.html
@@ -349,5 +349,103 @@
         </div>
     </div>
 </div>
+
+<div class="insta">
+    <p class="instafeed">Instagram Feeds</p>
+    <p class="username">@greenex_nutrition</p>
+</div>
+
+<div class="gridimg">
+<img src="/photos/grid1.png" alt="" class="grid1">
+<img src="/photos/grid2.png" alt="">
+<img src="/photos/grid3.png" alt="">
+<img src="/photos/grid4.png" alt="">
+<img src="/photos/grid5.png" alt="">
+<img src="/photos/grid6.png" alt="">
+<img src="/photos/grid7.png" alt="">
+<img src="/photos/grid8.png" alt="">
+<img src="/photos/grid9.png" alt="">
+</div>
+
+<div class="parah">
+    <p>
+        <p class="bold">Greenex Nutrition</p> – India’s Most Trusted Health Supplement Brand
+
+GXN , a brand for sports nutrition has been formed on the grounds of giving authentic sports sustenance supplements to health aficionados. Today, Greenex Nutrition offers a substantial variety of legitimate health products across several categories.GXN, a renowned name among supplement products is a completely possessed auxiliary of Bukalo India Pvt. Ltd, a main Health and fitness group with a nationwide presence.
+
+<p class="bold">Categories We Offer
+</p>
+Regardless of what nutrition your training demands, you will find it in the GXN's Supplement collection. The innovation & commitment provides you with a variety of items for each category you can select depending on the level and criteria of your training. You can select from the categories of GXN supplements:
+
+Whey Protein 
+Mass gainer
+Workout Essential
+Weight Loss
+Pre Post Workout
+
+<p class="bold">Authenticity</p>
+One of the critical factors involving health supplement brands is the AUTHENTICITY which is of extreme significance. We realize that we are offering consumable, and the difference is hard for you to spot yet the symptoms would be genuine, so in such cases originality of the product is essential. So along these lines, we ensure 100% AUTHENTICITY of products.
+
+<p class="bold">Quality</p>
+The brand is equipped with FSSAI, GMP and HACCP certified state of the art manufacturing plant in Delhi, which implies that your supplement experiences thorough testing and different quality checks before it reaches you.
+
+<p class="bold">Consumer Centric Approach</p>
+GXN believes in customer satisfaction since our consumers are at the core of our brand. Since we are offering a product that supplements your health, we ensure that all efforts and measures are taken to give you the best products. From high quality to taste and flavouring, GXN products are at par with global standards so that there is no compromise with your health and fitness. The support of our customers who patronize us is a certificate of our quality and approach.
+
+<p class="bold">Commitment to Excel
+</p>Pioneers in the field of sports supplements, GXN excels in providing sports-specific health nutrition. The brand offers products for athletes, bodybuilders and fitness enthusiasts in accordance to their needs. The special formulas offered by GXN are backed by scientific research and focus on various aspects of fitness such as improving energy level, developing lean muscle, reducing body fat, meeting training and nutrition targets and much more. Our commitment to excel ensures that all products are best in quality delivering results at par with consumer expectations.
+
+ </p>
+</div>
+<!-- footer area -->
+
+<div class="footer">
+    <div class="footerlogo">
+        <img src="/photos/logo dailyscoop.png" alt="">
+    </div>
+
+    <div class="links">
+        <div class="quick">
+            <ul>
+                Quick Links
+                <li><a href="#">Protein</a></li>
+                <li><a href="#">Gainer</a></li>
+                <li><a href="#">Post Workout</a></li>
+                <li><a href="#">Pre Workout</a></li>
+                <li><a href="#">Weight Loss</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Workout Essentials</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+        </div>
+        <div class="about-us">
+            <ul>
+                About Us
+                <li><a href="#">Contact Us</a></li>
+    <li><a href="#">FAQ</a></li>
+    <li><a href="#">Free Fast Delivery</a></li>
+    <li><a href="#">Good Quality Product</a></li>
+    <li><a href="#">Find the Original Product</a></li>
+    <li><a href="#">Hassle Free Return</a></li>
+    <li><a href="#">This is a Complete Natural Product</a></li>
+            </ul>
+        </div>
+        <div class="policy">
+            <ul>
+                Policy
+                <li><a href="#">Terms of Service</a></li>
+    <li><a href="#">Privacy Policy</a></li>
+    <li><a href="#">Returns & Refunds</a></li>
+    <li><a href="#">Shipping Policy</a></li>
+    <li><a href="#">Refund Policy</a></li>
+            </ul>
+        </div>
+        
+        <div class="links">
+            <ul>Join Our Community
+            <li>Receive 10% off your next order and be the first to know about new launches, access to exclusive deals, and more.</li></ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
