--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Scoop Clone</title>
+    <title>Best Body Building, Gym Supplements Online - Daily Scoop</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta name="description" content="Looking to buy gym protein supplements online? Visit Daily Scoop, for high-quality gym protein supplements. Uplift your workout and build strength with the best protein for bodybuilding.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://d2crvu6tosum4d.cloudfront.net/media/configuration/daily-scoop/ds-logo.png">
+    <meta name="keywords" content="gym protein supplement, protein supplements , Best Protein Powders , Gym Supliment , Body Building Supplements">
+    <meta name="author" content="Radhy Shyam (@radhey_bairagi)">
+
 </head>
 <body>
 
@@ -514,3 +520,5 @@ GXN believes in customer satisfaction since our consumers are at the core of our
 
 </body>
 </html>
+
+
