last css update

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 <div class="mainreview">
     <div class="review">
-        <p class="first">“Best Protien, <br>Love it”</p>
+        <p class="first">“Best Protien, ove it”</p>
         <p class="second">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic officia iste aut quae cupiditate sit odio recusandae ipsam quo, sed, enim vitae quasi adipisci delectus debitis mollitia iusto rem repellat. Distinctio a est tempora hic veritatis esse pariatur neque nobis reiciendis quis,</p>
         <div class="user">
             <div class="user-info">
@@ -348,7 +348,7 @@
                 <p class="fourth">Hisar</p>
                 <p class="fifth">* * * * *</p>
             </div>
-            <img src="/photos/Bro 20170908_151929.jpg" alt="">
+            <img src="/photos/Bro 20170908_151929.jpg" alt="" class="secondclassimg">
         </div>
     </div>
 
@@ -520,5 +520,3 @@ GXN believes in customer satisfaction since our consumers are at the core of our
 
 </body>
 </html>
-
-
