--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 </head>
 <body>
 
+    <script> prompt("this is a non funtional website, basis on HTML and CSS only")  </script>
+
     <!-- Main Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="/photos/logo dailyscoop.png" alt="Logo">
+            <img src="photos/logo dailyscoop.png" alt="Logo">
         </div>
 
         <div class="search-bar2">
